Cart Functionality | Improve Code | 19 Aug | Mandeep Singh

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ JWT_KEY = 'MYN@dE_@pp'
 JWT_EXPIRE_IN = "1h"
 
 DB_HOST = 'localhost'
-DB_USER = 'root'
-DB_PASSWORD = ''
+DB_USER = 'node_app'
+DB_PASSWORD = 'Qwerty@123'
 DB_DATABASE = 'node_app'
 CONNECTION_LIMIT = 12
